# AI_powered_ad_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/ad_generator_app/: __init__.py  apps.py  urls.py  views.py
core/ad_generator_app/templates/: home.html
core/ad_generator_app/utils/: embedding_utils.py  rag_utils.py
core/core/: settings.py  urls.py
core/data/: blog_posts.json  products.json
